crates/keron-lang/tests/corpus/errors/check/concat_mismatched_lists.keron
val xs = [1, 2] ++ ["a", "b"]
